<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_watchlist" />
        <item
            android:id="@+id/nav_strategies"
            android:icon="@drawable/ic_grain_black_24dp"
            android:title="@string/menu_strategies" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/menu_article" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_news" />

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/menu_profile" />
            <!--            <item-->
            <!--                android:id="@+id/nav_settings"-->
            <!--                android:icon="@drawable/ic_settings_black_24dp"-->
            <!--                android:title="@string/menu_settings" />-->
            <!--            <item-->
            <!--                android:id="@+id/nav_billings"-->
            <!--                android:icon="@drawable/ic_credit_card_black_24dp"-->
            <!--                android:title="@string/menu_billings" />-->
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_help" />

    </group>

<!--    <item android:title="User Options">-->
<!--&lt;!&ndash;        &ndash;&gt;<menu></menu>-->
<!--    </item>-->

</menu>
